
Template for new versions:

## New Tools

## New Features

## Fixes

## Misc Improvements

## Removed

]]]

# Future

## New Tools

## New Features

## Fixes
- `full-heal`: fix ``-r --all_citizens`` option combination not resurrecting citizens
- `open-legends`: don't intercept text bound for vanilla search widgets
- `gui/unit-info-viewer`: correctly display skill levels when rust is involved
- `build-now`: fix error when building buildings that (in previous DF versions) required the architecture labor
- `prioritize`: fix incorrect loading of persisted data on some OS types
- `list-waves`: no longer gets confused by units that leave the map and then return (e.g. squads who go out on raids)
- `fix/dead-units`: fix error when removing dead units from burrows and the unit with the greatest ID was dead
- `makeown`: ensure names given to adopted units (or units created with `gui/sandbox`) are respected later in legends mode
- `gui/autodump`: prevent dumping into walls or invalid map area, as well as selecting in unallocated blocks
- `gui/autodump`: set proper projectile flags to prevent items from being destroyed

## Misc Improvements
- `build-now`: if `suspendmanager` is running, run an unsuspend cycle immediately before scanning for buildings to build
- `list-waves`: now outputs the names of the dwarves in each migration wave
- `list-waves`: can now display information about specific migration waves (like identifying your starting 7 dwarves)
- `allneeds`: display counts of fulfillment degrees as a separate column

## Removed

# 50.13-r3

## New Tools
- `advtools`: collection of useful commands and overlays for adventure mode
- `advtools`: added an overlay that automatically fixes corrupt throwing/shooting state, preventing save/load crashes
- `advtools`: advtools party - promotes one of your companions to become a controllable adventurer
- `advtools`: advtools pets - fixes pets you gift in adventure mode.