@@ -34,6 +34,7 @@ Template for new versions:
 - `full-heal`: fix ``-r --all_citizens`` option combination not resurrecting citizens
 - `open-legends`: don't intercept text bound for vanilla search widgets
 - `gui/unit-info-viewer`: correctly display skill levels when rust is involved
+- `timestream`: fix dwarves spending too long eating and drinking
 - `build-now`: fix error when building buildings that (in previous DF versions) required the architecture labor
 - `prioritize`: fix incorrect loading of persisted data on some OS types
 - `list-waves`: no longer gets confused by units that leave the map and then return (e.g. squads who go out on raids)
